--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -278,26 +278,18 @@
 
 #notification_list {
 	min-width: 450px;
-	.dropdown-contents {
-		margin: 40px 0 0 0;
-	}
+	top: 45px;
 	.header {
 		@include spectral-common;
 		font-size: rem(18px);
 		background: $color-04;
-		padding: 0 150px 0 10px;
-		height: 40px;
-		line-height: 40px;
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		&, .header_settings {
-			position: absolute;
-		}
+		padding: 6.5px 150px 6.5px 20px;
+		position: relative;
+		margin: -20px -20px 20px -20px;
 		.header_settings {
+			position: absolute;
 			right: 10px;
-			top: 0;
+			top: 11.5px;
 			font-family: $font-01;
 			font-variant: none;
 			font-size: rem(13px);
@@ -328,22 +320,23 @@
 							margin: 0;
 						}
 					}
+					.notification-title {
+						padding: 0 25px 0 0;
+					}
 					.notification-time {
 						text-align: right;
 					}
 				}
 			}
 			.icon-mark {
-				display: none;
-				position: absolute;
-				top: 2px;
-				right: 2px;
-				z-index: 2;
-				color: $color-06;
-				text-align: center;
-			}
-			&:hover .icon-mark {
 				display: block;
+				position: absolute;
+				top: 0;
+				right: 0;
+				z-index: 2;
+				.icon {
+					width: auto;
+				}
 			}
 		}
 	}
@@ -516,7 +509,8 @@
 			}
 			& > .icon {
 				@include sizing(50px, 100%);
-				line-height: 220%;
+				max-height: 44px;
+				line-height: 44px;
 				position: absolute;
 				top: 0;
 				right: 0;
